--- a/src/components/player-audio/player-audio.scss
+++ b/src/components/player-audio/player-audio.scss
@@ -116,6 +116,7 @@ player-audio {
     padding: 0;
     margin: 0;
     justify-content: space-evenly;
+    list-style: none;
 
     .item {
 
