--- a/src/pages/preview-by-city/preview-by-city.scss
+++ b/src/pages/preview-by-city/preview-by-city.scss
@@ -184,6 +184,7 @@ page-preview-by-city {
   }
 
   .switch__target__list {
+    list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
